--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -95,8 +95,14 @@ licensing strategies aimed at avoiding such `double dipping' scenarios,
 in which well-established commercial publishers gain twice from reading
 and open access publishing, as well as to increase publisher-provided
 immediate open access (Björk \& Solomon, 2014; Schimmer et al., 2015).
-These considerations resulted into transformative agreements, which
-cover a broad range of contracts between library consortia and
+These considerations resulted into transformative agreements\footnote{In
+  this paper I use the term ``transformative agreement'', addressing
+  also offsetting, read-and-publish or publish-and-read deals, and other
+  variants (Borrego et al., 2020; Hinchliffe, 2019). Although the term
+  is critised as misleading and not useful to describe these agreements
+  between library consortia and publishers (Babini et al., 2022), it is
+  widely used in policy discussions and in the research literature.},
+which cover a broad range of contracts between library consortia and
 publishers from mid-2010s onwards where institutional spending for
 subscriptions and open access publishing are considered together
 (Borrego et al., 2020; Hinchliffe, 2019). Transformative agreements seek
@@ -145,11 +151,11 @@ full open access could not be observed (Matthias et al., 2019; Momeni et
 al., 2021). The focus on large commercial publishers might also increase
 inequality, because transformative agreements focus on pay to publish
 open access mainly targets institutions from high-income countries,
-furthering a questionable journal prestige culture (\textbf{budapest?}).
-Besides, an editorial-board resignation raised concerns that publishers'
-desire to maximize journal publication volume ``without regard to
-quality'' is a consequence of transformative agreements (Rasmussen,
-2023).
+furthering a questionable journal prestige culture (Babini et al.,
+2022). Besides, an editorial-board resignation raised concerns that
+publishers' desire to maximize journal publication volume ``without
+regard to quality'' is a consequence of transformative agreements
+(Rasmussen, 2023).
 
 The controversies surrounding hybrid open access and transformative
 agreements have led to varying policy conclusions. For instance, the
@@ -163,7 +169,9 @@ Journal program in 2023 due to publishers' failure to meet self-defined
 open access growth targets (Brainard, 2023). In contrast, the German
 DEAL consortium signed a five-year transformative agreement with
 Elsevier starting in 2024, while also renewing its contracts with
-Springer Nature and Wiley until the end of 2028.
+Springer Nature and Wiley until the end of 2028. At the same time, the
+Colombia Consortium signed the first transformative agreements in Latin
+America (Muñoz-Vélez et al., 2024).
 
 Despite these controversies around transformative agreements as a means
 of transitioning journal publishing to full open access, there is
@@ -729,28 +737,115 @@ where only a few or no agreements were in place.
 \section{Discussion}\label{discussion}}
 
 The primary aim of this study was to investigate the adoption of open
-access in hybrid journals through transformative agreements, presenting
-a novel approach based on open data. The results indicate a steady
-increase, estimating that the majority of open access in hybrid journals
-in 2022 originate from institutions that had an transformative agreement
-in place. Yet, the majority of research literature published in hybrid
-journals between 2018 and 2022 remained behind a publisher paywall.
-Growth in the adoption of open access in hybrid journals through
-transformative agreements can be largely attributed to big three
-commercial publishers -- Elsevier, Springer Nature, and Wiley -- but
-varies across journals, publishers, subjects, and country affiliations.
-Despite limitations regarding the data used, the findings indicate that
-the current level of implementation of transformative agreements is
-insufficient to bring about a large-scale transformation to full open
-access.
+access in hybrid journals in transformative agreements, which were
+introduced as a temporal means to support the transition of
+subscription-based academic publishing to full open access. This study
+presents a novel approach based on open data, which leverages metadata
+on over 700 agreements and nine million journal articles to estimate the
+extent to which transformation agreement contribute to the transition of
+this journal business model based on institutional affiliation. The
+results highlight a strong growth in open access between 2018 and 2022,
+particularly driven by an increasing number of institutions that had
+transformative agreements in place. Yet, the majority of research
+literature published in hybrid journals in this five-year period
+remained behind a publisher's paywall. Growth in the adoption of open
+access in hybrid journals, in particular through transformative
+agreements, can be largely attributed to three large commercial
+publishers -- Elsevier, Springer Nature, and Wiley -- but varies
+substantially across journals, publishers, subjects, and country
+affiliations. Despite the limitations of the data used, the findings
+indicate that the current level of implementation of transformative
+agreements is insufficient to bring about a large-scale transition to
+fully open access.
 
-Presenting an initial overview, some journals recorded substantial open
-access uptake rates through transformative agreements. Previous research
-indicate that these journals highlight specific areas where publisher
-portfolios already had strong market positions {[}@{]}.
+A key finding of the analysis is that transformative agreements increase
+market concentration. Specifically, the three largest commercial
+publishers---Elsevier, Springer Nature, and Wiley---have increased their
+market share in the context of open access, particularly in regard to
+open access provided through transformative agreements. Together, the
+three publishers accounted for three-fourths of open access articles
+through transformative agreements, despite publishing less than half of
+the total publication volume published between 2018 and 2022. This
+observation aligns with previous research on shifts in the publishing
+market following the introduction of funding opportunities for hybrid
+open access (Butler et al., 2023; Jahn \& Tullney, 2016; Shu \&
+Larivière, 2023). Additionally, the results confirm previously observed
+variations by publisher, with Elsevier exhibiting a different
+development than Springer Nature and Wiley (Butler et al., 2023; Jahn et
+al., 2022). However, it must be noted that the focus of transformative
+agreements on publishers with large hybrid journal portfolios is
+intentional (Campbell et al., 2022). Because of transformative
+agreements with a few large publishers, national consortia were able to
+substantially increased their country's annual open access article
+volume (Huang et al., 2020; Pinhasi et al., 2021; Taubert et al., 2023;
+Wenaas, 2022).
 
-\hypertarget{conclusions}{%
-\section{Conclusions}\label{conclusions}}
+Moreover, this study presents varying levels of open access uptake
+through transformative agreements across journals, which can be
+attributed to the alignment of authors' affiliations and the
+availability of such agreements at their institutions. In line with
+previous research findings (Butler et al., 2023; Jahn et al., 2022),
+high uptake rates were observed across hybrid journals in the Social
+Sciences and Humanities. However, it is important to emphasise that
+these hybrid journals do not encompass the entire field. For example, a
+study by Khanna et al. (2022) found that approximately 60\% of journals
+utilizing the open-source publishing platform Open Journal Systems (OJS)
+fall within the Social Sciences and Humanities. In these fields, the
+majority of full open access journals are so-called ``Diamond OA
+journals'' that do not charge publication fees (Bosman et al., 2021).
+Rather, this result can be more accurately attributed to the substantial
+proportion of authors from high-income countries who publish in these
+hybrid journals included in transformative agreements, particularly when
+journals are of local relevance, such as through the belonging to
+national societies or regional research scope.
+
+Surprisingly, the total publication output of high-income countries
+belonging to the OECD declined susbtantially between 2018 and 2022,
+while the BRICS countries recorded an steady increase. Because the BRICS
+expansion can be exclusivley attributed to closed access articles, this
+developement has the potential to hinder the transition of academic
+journal publishing to full open access through transformative
+agreements. In China, the most productive country according to the total
+article volume in hybrid journals, (shu und zhang und das indische
+paper)
+
+other countries less represented and brazil diamond russia The Eastern
+Europe Expanded Collection
+
+but not coherent acorss all countries, in particular in the us.
+neverthelles china and us have susbtantial market shares when it comes
+to hybrid oa.
+
+There are at least three potential limitations concerning the results of
+this study. A first limitation concerns \ldots{} A second potential
+limitation is that \ldots{}
+
+These data have some potential intervention implications. forst and
+formesot, the supprot recent pocliy decision highlighting a grew in oa
+at country-level, but questioning the. if thouse contracts, a
+transiliteration is ttoo short and might require a longer
+transiltierional period. the growtrh in brics however would require too
+impleis unboundling, other payment means and focus on alternative, in
+particular innovations like preprinting, diamond oa
+
+In terms of future research, it would be useful to extend the current
+findings by examining other oa types, combine oa with mobility.
+fianncials tudies are also required to assess claims of cost-sensitive,
+here, publisher and publsiher are required to increase transparency. at
+the same time, studies needed to assess these claim economically. data
+can be improved to entail more, in apritcular consortia could start to
+disclose funded articles as , with openapc already a cwors-orucing
+platform available. also libraries can contrbute to an improved
+catalogiuing of transformative agreements including participating
+insitutions, which is aligned with standards used in schoalrly
+communications like ror id.
+
+In summary, after more than tow decades, hybrid open access has not
+demonstrated a succesful menas. stduying transofrmative agreemnts,
+effects can be found at the -level of participating countries, but
+overlla uptake remains low, in particular with regard to publications
+from brocs countries, which country share rise, exclusively on the
+expense of closed access. means
 
 \hypertarget{references}{%
 \section*{References}\label{references}}
@@ -758,6 +853,12 @@ portfolios already had strong market positions {[}@{]}.
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
+\leavevmode\vadjust pre{\hypertarget{ref-budapest}{}}%
+Babini, D., Chan, L., Hagemann, M., Joseph, H., Kuchma, I., \& Suber, P.
+(2022). \emph{{The Budapest Open Access Initiative-20th. Anniversary
+recommendations (BOAI20)}}.
+\url{https://www.budapestopenaccessinitiative.org/boai20/}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Bakker_2024}{}}%
 Bakker, C., Langham-Putrow, A., \& Riegelman, A. (2024). Impact of
 transformative agreements on publication patterns: An analysis based on
@@ -796,6 +897,11 @@ Borrego, Á., Anglada, L., \& Abadal, E. (2020). Transformative
 agreements: Do they pave the way to open access? \emph{Learned
 Publishing}. \url{https://doi.org/10.1002/leap.1347}
 
+\leavevmode\vadjust pre{\hypertarget{ref-bosman_2021_4558704}{}}%
+Bosman, J., Frantsvåg, J. E., Kramer, B., Langlais, P.-C., \& Proudman,
+V. (2021). \emph{OA diamond journals study. Part 1: findings}. Zenodo.
+\url{https://doi.org/10.5281/zenodo.4558704}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Brainard_2023}{}}%
 Brainard, J. (2023). {`Transformative'} journals get booted for
 switching to open access too slowly. In \emph{Science: SCIENCEINSIDER}.
@@ -811,6 +917,13 @@ Butler, L.-A., Matthias, L., Simard, M.-A., Mongeon, P., \& Haustein, S.
 (2023). The oligopoly's shift to open access: How the big five academic
 publishers profit from article processing charges. \emph{Quantitative
 Science Studies}, 1--22. \url{https://doi.org/10.1162/qss_a_00272}
+
+\leavevmode\vadjust pre{\hypertarget{ref-ifla}{}}%
+Campbell, C., Dér, Á., Geschuhn, K., \& Valente, A. (2022). How are
+transformative agreements transforming libraries? In I. F. of Library
+Associations \& I. (IFLA) (Eds.), \emph{87th IFLA world library and
+information congress (WLIC) / 2022 in dublin, ireland}. IFLA.
+\url{https://repository.ifla.org/handle/123456789/1973}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Dallmeier_2010}{}}%
 Dallmeier-Tiessen, S., Goerner, B., Darby, R., Hyppoelae, J.,
@@ -870,6 +983,12 @@ Jubb, M., Plume, A., Oeben, S., Brammer, L., Johnson, R., Bütün, C., \&
 Pinfield, S. (2017). \emph{Monitoring the transition to open access:
 December 2017}.
 \url{https://web.archive.org/web/20200212015524/https://www.universitiesuk.ac.uk/policy-and-analysis/reports/Documents/2017/monitoring-transition-open-access-2017.pdf}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Khanna_2022}{}}%
+Khanna, S., Ball, J., Alperin, J. P., \& Willinsky, J. (2022).
+Recalibrating the scope of scholarly publishing: A modest step in a vast
+decolonization process. \emph{Quantitative Science Studies},
+\emph{3}(4), 912--930. \url{https://doi.org/10.1162/qss_a_00228}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Laakso_2016}{}}%
 Laakso, M., \& Björk, B.-C. (2016). Hybrid open access--a longitudinal
@@ -946,6 +1065,14 @@ Moskovkin, V. M., Saprykina, T. V., \& Boichuk, I. V. (2022).
 Transformative agreements in the development of open access.
 \emph{Journal of Electronic Resources Librarianship}, \emph{34}(3),
 165--207. \url{https://doi.org/10.1080/1941126x.2022.2099000}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Mu_oz_V_lez_2024}{}}%
+Muñoz-Vélez, H., Pallares, C., Echavarría, A. F., Contreras, J., Pavas,
+A., Bello, D., Rendón, C., Calderón-Rojas, J., \& Garzón, F. (2024).
+Strategies for negotiating and signing transformative agreements in the
+global south: The colombia consortium experience. \emph{Journal of
+Library Administration}, \emph{64}(1), 80--98.
+\url{https://doi.org/10.1080/01930826.2023.2287945}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Parmhed_2023}{}}%
 Parmhed, S., \& Säll, J. (2023). Transformative agreements and their
