--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -120,6 +120,43 @@ abstract = {{The SOAP (Study of Open Access Publishing) project has compiled dat
 
 @article{Borrego_2023, title={Article processing charges for open access journal publishing: A review}, volume={36}, ISSN={1741-4857}, url={http://dx.doi.org/10.1002/leap.1558}, DOI={10.1002/leap.1558}, number={3}, journal={Learned Publishing}, publisher={Wiley}, author={Borrego, Ángel}, year={2023}, month=jul, pages={359–378} }
 
+@misc{budapest, 
+author = {Babini, Dominique and Chan, Leslie and Hagemann, Melissa and Joseph, Heather and Kuchma, Iryna and Suber, Peter},
+title = {{The Budapest Open Access Initiative-20th. Anniversary recommendations (BOAI20)}},
+url = {https://www.budapestopenaccessinitiative.org/boai20/},
+year = {2022}
+}
+
+@article{Khanna_2022, title={Recalibrating the scope of scholarly publishing: A modest step in a vast decolonization process}, volume={3}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00228}, DOI={10.1162/qss_a_00228}, number={4}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Khanna, Saurabh and Ball, Jon and Alperin, Juan Pablo and Willinsky, John}, year={2022}, pages={912–930} }
+
+@inproceedings{ifla,
+    title        = {How are transformative agreements transforming libraries?},
+    author       = {Campbell, Colleen and Dér, Ádám and Geschuhn, Kai and Valente, Ana},
+    year         = 2022,
+    month        = {July},
+    booktitle    = {87th IFLA World Library and Information Congress (WLIC) / 2022 in Dublin, Ireland},
+    publisher    = {IFLA},
+    address      = {Dublin, Ireland},
+    editor       = {International Federation of Library Associations and Institutions (IFLA)},
+    url          = {https://repository.ifla.org/handle/123456789/1973}
+}
+
+@misc{bosman_2021_4558704,
+  author       = {Bosman, Jeroen and
+                  Frantsvåg, Jan Erik and
+                  Kramer, Bianca and
+                  Langlais, Pierre-Carl and
+                  Proudman, Vanessa},
+  title        = {OA Diamond Journals Study. Part 1: Findings},
+  month        = mar,
+  year         = 2021,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.4558704},
+  url          = {https://doi.org/10.5281/zenodo.4558704}
+}
+
+ @article{Mu_oz_V_lez_2024, title={Strategies for Negotiating and Signing Transformative Agreements in the Global South: The Colombia Consortium Experience}, volume={64}, ISSN={1540-3564}, url={http://dx.doi.org/10.1080/01930826.2023.2287945}, DOI={10.1080/01930826.2023.2287945}, number={1}, journal={Journal of Library Administration}, publisher={Informa UK Limited}, author={Muñoz-Vélez, Hernán and Pallares, César and Echavarría, Andrés Felipe and Contreras, Julysa and Pavas, Andrés and Bello, David and Rendón, César and Calderón-Rojas, Jacqueline and Garzón, Fernando}, year={2024}, month=jan, pages={80–98} }
+ 
 %%%%
 @misc{OS_Monitor,
   title = {Open Science Monitor: Trends for open access to publications},
